--- a/RecipeList/Views/Recipes/Details.cshtml
+++ b/RecipeList/Views/Recipes/Details.cshtml
@@ -47,6 +47,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.User.UserName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.User.UserName)
+        </dd>
     </dl>
 </div>
 <div>
