--- a/RecipeList/Views/Recipes/Index.cshtml
+++ b/RecipeList/Views/Recipes/Index.cshtml
@@ -31,6 +31,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.User.UserName)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -55,6 +58,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.UserName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
