--- a/RecipeList/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/RecipeList/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using RecipeList.Models;
+@inject SignInManager<RecipeListUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
