Made a public list and added the ability to publish recipes to it (extremely scuffed needs some fixing but works, also cant unpublish)

--- a/RecipeList/Views/Home/Index.cshtml
+++ b/RecipeList/Views/Home/Index.cshtml
@@ -34,4 +34,5 @@
 </style>
 <div class="text-center">
     <a href="/Recipes"><button class="nav-button">Go to private list</button></a>
+    <a href="/PublicRecipe"><button class="nav-button">Go to public list</button></a>
 </div>
