--- a/RecipeList/Views/Shared/_Layout.cshtml
+++ b/RecipeList/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,27 +11,29 @@
     <link rel="stylesheet" href="~/RecipeList.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RecipeList</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
-            </div>
-        </nav>
+    <header class="custom-navbar">
+        <div class="navbar-left">
+            <a class="navbar-brand" href="/">Home</a>
+            <a href="/Recipes">My Recipes</a>
+            <a href="/PublicRecipe">Public Recipes</a>
+            
+        </div>
+
+
+        <div class="navbar-right auth-links">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <span>Welcome, @User.Identity.Name!</span>
+                <form method="post" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="logout-btn">Logout</button>
+                </form>
+            }
+            else
+            {
+                <a href="/Identity/Account/Login">Login</a>
+                <a href="/Identity/Account/Register">Register</a>
+            }
+        </div>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
