--- a/RecipeList/Views/Shared/_Layout.cshtml
+++ b/RecipeList/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <body>
     <header class="custom-navbar">
         <div class="navbar-left">
-            <a class="navbar-brand" href="/">Home</a>
+            <a href="/">Home</a>
             <a href="/Recipes">My Recipes</a>
             <a href="/PublicRecipe">Public Recipes</a>
             
@@ -42,9 +42,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - RecipeList - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+       
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
