--- a/RecipeList/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/RecipeList/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -4,13 +4,34 @@
     ViewData["Title"] = "Register confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="margin: auto">@ViewData["Title"]</h1>
+<style>
+    
+
+    .button-link {
+        display: inline-block;
+        padding: 3em;
+        text-decoration: none;
+        text-align: center;
+        background-color: #4caf50;
+        border: none;
+        color: white;
+        font-size: 15px;
+        font-weight: 500;
+        border-radius: 10px;
+        width: fit-content;
+        height: auto;
+        cursor: pointer;
+        margin: auto;
+        margin-top: 3em;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+    }
+</style>
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+            <a id="confirm-link" href="@Model.EmailConfirmationUrl" class="button-link">Click here to confirm your account</a>
 </p>
     }
     else
