--- a/RecipeList/Views/Recipes/Details.cshtml
+++ b/RecipeList/Views/Recipes/Details.cshtml
@@ -1,61 +1,59 @@
-﻿@model RecipeList.Models.Recipes
+﻿l RecipeList.Models.Recipes
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Public Recipe Details";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <h1 class="text-center mb-4">@Model.Name</h1>
 
-<div>
-    <h4>Recipes</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-       
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Calories)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Calories)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fats)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fats)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Carbs)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Carbs)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Proteins)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Proteins)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.UserName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.UserName)
-        </dd>
-    </dl>
+    @if (Model.Picture != null)
+    {
+        <div class="d-flex justify-content-center mb-4">
+            <div style="width: 300px; height: 300px; overflow: hidden; border-radius: 15px; border: 1px solid #ccc;">
+                <img src="@Model.Picture.PicturePath" alt="Recipe Image" style="width: 100%; height: 100%; object-fit: cover;" />
+            </div>
+        </div>
+    }
+    else
+    {
+        <div class="text-center text-muted mb-4">No image available</div>
+    }
+
+    <div class="mb-4">
+        <h4>Description</h4>
+        <p>@Model.Description</p>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3"><strong>Calories:</strong> @Model.Calories</div>
+        <div class="col-md-3"><strong>Fats:</strong> @Model.Fats</div>
+        <div class="col-md-3"><strong>Carbs:</strong> @Model.Carbs</div>
+        <div class="col-md-3"><strong>Proteins:</strong> @Model.Proteins</div>
+    </div>
+
+
+
+    <div class="mt-4 d-flex flex-wrap gap-2">
+        @if (ViewBag.IsCopiedFromPublic != true)
+{
+    <a asp-action="Edit" asp-route-id="@Model.ID" class="btn btn-warning">Edit Recipe</a>
+}
+
+        @if (ViewBag.CanPublish == true)
+        {
+            <form method="post" asp-controller="PublicRecipe" asp-action="Publish" asp-route-id="@Model.ID">
+                <button type="submit" class="btn btn-success">Publish</button>
+            </form>
+        }
+
+        <form method="post" asp-action="Delete" asp-route-id="@Model.ID">
+            <button type="submit" class="btn btn-danger">Remove Recipe</button>
+        </form>
+
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    </div>
+
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
