--- a/RecipeList/Views/Recipes/Index.cshtml
+++ b/RecipeList/Views/Recipes/Index.cshtml
@@ -1,60 +1,38 @@
 ﻿@model IEnumerable<RecipeList.Models.Recipes>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "My Recipes";
 }
 
-<h1>My Recipes</h1>
+<div class="d-flex justify-content-between align-items-center mb-4">
+    <h1>My Recipes</h1>
+    <a href="/Recipes/Create" class="btn btn-success">+ Create New Recipe</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4 mb-4">
+            <div class="card shadow-sm h-100">
+                <div class="card-body text-center">
+                    <h5>
+                        <a asp-action="Details" asp-route-id="@item.ID" class="text-decoration-none text-black">
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </a>
+                    </h5>
+                    <div class="mt-3">
+                        @if (item.Picture != null)
+                        {
+                            <img src="@item.Picture.PicturePath" alt="Recipe Image" class="img-fluid rounded" />
+                        }
+                        else
+                        {
+                            <div class="text-muted">No Image</div>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Calories)</th>
-            <th>@Html.DisplayNameFor(model => model.Fats)</th>
-            <th>@Html.DisplayNameFor(model => model.Carbs)</th>
-            <th>@Html.DisplayNameFor(model => model.Proteins)</th>
-            <th>@Html.DisplayNameFor(model => model.Description)</th>
-            <th>Picture</th>
-            <th>@Html.DisplayNameFor(model => model.User.UserName)</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Calories)</td>
-                <td>@Html.DisplayFor(modelItem => item.Fats)</td>
-                <td>@Html.DisplayFor(modelItem => item.Carbs)</td>
-                <td>@Html.DisplayFor(modelItem => item.Proteins)</td>
-                <td>@Html.DisplayFor(modelItem => item.Description)</td>
-                <td>
-                    @if (item.Picture != null)
-                    {
-                        <img src="@item.Picture.PicturePath" alt="Recipe Image" width="100" />
-                    }
-                    else
-                    {
-                        <span>No Image</span>
-                    }
-                </td>
-                <td>@item.User?.UserName</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a> |
-                    <form asp-controller="PublicRecipe" asp-action="Publish" method="post" style="display:inline;">
-                        <input type="hidden" name="id" value="@item.ID" />
-                        <button type="submit" class="btn btn-link p-0 m-0 align-baseline">Publish</button>
-                    </form>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
