--- a/RecipeList/Views/Recipes/Create.cshtml
+++ b/RecipeList/Views/Recipes/Create.cshtml
@@ -4,223 +4,336 @@
     ViewData["Title"] = "Create";
 }
 <style>
-    .field-container {
-        position: relative;
-        margin-top: 50px;
-        margin-right: 50px;
-        margin-bottom: 5px;
-        width: 200px;
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        background-color: #ffffff;
+        padding: 30px;
+        margin: auto;
+        margin-top: 3em;
+        width: 650px;
+        border-radius: 20px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
     }
 
-    .field-container-first {
-        position: relative;
-        margin-right: 50px;
-        margin-bottom: 5px;
-        width: 200px;
+    .number-input {
+        display: flex;
+        align-items: left;
+        gap: 5px;
     }
 
-    .field-container span {
-        color: red
-    }
-    .input-container {
-      position: relative;
-      margin-top: 50px auto;
-      margin-right: 50px auto;
-      margin-left: 50px auto;
-      width: 200px;
+
+        .number-input button {
+            width: 30px;
+            height: 30px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+
+        .number-input input {
+            width: 60px;
+            text-align: center;
+            font-size: 16px;
+        }
+
+
+    ::placeholder {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
-    .input-container-desc {
-        position: relative;
-        margin-top: 50px auto;
-        margin-right: 50px auto;
-        margin-left: 50px auto;
-        width: 500px;
+    .form button {
+        align-self: flex-end;
     }
 
-    .input-container input[type="text"] {
-      font-size: 20px;
-      width: 100%;
-      border: none;
-      border-bottom: 2px solid #ccc;
-      padding: 5px 0;
-      background-color: transparent;
-      outline: none;
+    .flex-column > label {
+        color: #151717;
+        font-weight: 600;
     }
 
-    .input-container-desc input[type="text"] {
-        font-size: 20px;
-        width: 100%;
+    .inputForm {
+        border: 1.5px solid #ecedec;
+        border-radius: 10px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        transition: 0.2s ease-in-out;
+    }
+
+    .inputForm-Name{
+
+        border: 1.5px solid #ecedec;
+        border-radius: 10px;
+        height: 50px;
+        width: fit-content;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        transition: 0.2s ease-in-out;
+    }
+
+    .inputForm-Desc {
+        border: 1.5px solid #ecedec;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        transition: 0.2s ease-in-out;
+    }
+
+    .input {
+        margin-left: 10px;
+        border-radius: 10px;
         border: none;
-        border-bottom: 2px solid #ccc;
-        padding: 5px 0;
-        background-color: transparent;
-        outline: none;
-    }
-
-    .input-container .label {
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: #ccc;
-      transition: all 0.3s ease;
-      pointer-events: none;
-    }
-
-    .input-container-desc .label {
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: #ccc;
-        transition: all 0.3s ease;
-        pointer-events: none;
-    }
-
-
-    .input-container input[type="text"]:focus ~ .label,
-    .input-container input[type="text"]:valid ~ .label {
-      top: -20px;
-      font-size: 16px;
-      color: #333;
-    }
-
-    .input-container-desc input[type="text"]:focus ~ .label,
-    .input-container-desc input[type="text"]:valid ~ .label {
-        top: -20px;
-        font-size: 16px;
-        color: #333;
-    }
-
-    .input-container .underline {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      height: 2px;
-      width: 100%;
-      background-color: #333;
-      transform: scaleX(0);
-      transition: all 0.3s ease;
-    }
-
-    .input-container-desc .underline {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        height: 2px;
         width: 100%;
-        background-color: #333;
-        transform: scaleX(0);
-        transition: all 0.3s ease;
+        height: 100%;
     }
 
-    .input-container input[type="text"]:focus ~ .underline,
-    .input-container input[type="text"]:valid ~ .underline {
-      transform: scaleX(1);
-     }
+        .input:focus {
+            outline: none;
+        }
 
-    .input-container-desc input[type="text"]:focus ~ .underline,
-    .input-container-desc input[type="text"]:valid ~ .underline {
-        transform: scaleX(1);
+    .inputForm:focus-within {
+        border: 1.5px solid #2d79f3;
     }
+
+    .flex-row {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+        justify-content: space-between;
+    }
+
+        .flex-row > div > label {
+            font-size: 14px;
+            color: black;
+            font-weight: 400;
+        }
+
+    .span {
+        font-size: 14px;
+        margin-left: 5px;
+        color: #2d79f3;
+        font-weight: 500;
+        cursor: pointer;
+    }
+
+    .button-submit {
+        margin: 20px 0 10px 0;
+        background-color: #4caf50;
+        border: none;
+        color: white;
+        font-size: 15px;
+        font-weight: 500;
+        border-radius: 10px;
+        height: 50px;
+        width: 100%;
+        cursor: pointer;
+    }
+
+    .p {
+        text-align: center;
+        color: black;
+        font-size: 14px;
+        margin: 5px 0;
+    }
+
+    .btn {
+        margin-top: 10px;
+        width: 100%;
+        height: 50px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        gap: 10px;
+        border: 1px solid #ededef;
+        background-color: white;
+        cursor: pointer;
+        transition: 0.2s ease-in-out;
+    }
+
+        .btn:hover {
+            border: 1px solid #2d79f3;
+            
+        }
+    .required-field{
+        color: red;
+    }
+    
+    .file-upload-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 300px;
+        font-family: sans-serif;
+    }
+
+    .file-upload {
+        position: relative;
+        display: inline-block;
+        overflow: hidden;
+        border-radius: 8px;
+    }
+
+        .file-upload input[type="file"] {
+            position: absolute;
+            left: 0;
+            top: 0;
+            opacity: 0;
+            cursor: pointer;
+            height: 100%;
+            width: 100%;
+        }
+
+    .upload-btn {
+        background-color: #2d2d2d;
+        color: white;
+        padding: 10px 16px;
+        border-radius: 8px;
+        font-size: 14px;
+        cursor: pointer;
+        border: none;
+        transition: background-color 0.2s;
+        display: inline-block;
+    }
+
+        .upload-btn:hover {
+            background-color: #444;
+        }
+
+    .preview-img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        display: none;
+    }
+
+    
 </style>
-<h1>Create</h1>
-
-<h4>Recipes</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" method="post" enctype="multipart/form-data">
-            <!--Name-->
-            <div class="field-container-first">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container">
-                    <input type="text" id="input" required="true" asp-for="Name">
-                    <label for="input" class="label" asp-for="Name">Name</label>
-                    <div class="underline"></div>
-                </div>
-            <span class="required-field" asp-validation-for="Name"></span>
-            </div>
-
-           
-
-            <!--Calories-->
-            <div class="field-container">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container">
-                    <input type="text" id="input" required="true" asp-for="Calories">
-                    <label for="input" class="label" asp-for="Calories">Calories</label>
-                    <div class="underline"></div>
-                </div>
-                <span class="required-field" asp-validation-for="Calories"></span>
-            </div>
-
-            <!--Fats-->
-            <div class="field-container">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container">
-                    <input type="text" id="input" required="true" asp-for="Fats">
-                    <label for="input" class="label" asp-for="Fats">Fats</label>
-                    <div class="underline"></div>
-                </div>
-                <span class="required-field" asp-validation-for="Fats"></span>
-            </div>
-
-            <!--Carbs-->
-            <div class="field-container">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container">
-                    <input type="text" id="input" required="true" asp-for="Carbs">
-                    <label for="input" class="label" asp-for="Carbs">Carbs</label>
-                    <div class="underline"></div>
-                </div>
-                <span class="required-field" asp-validation-for="Carbs"></span>
-            </div>
-
-            <!--Proteins-->
-            <div class="field-container">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container">
-                    <input type="text" id="input" required="true" asp-for="Proteins">
-                    <label for="input" class="label" asp-for="Proteins">Proteins</label>
-                    <div class="underline"></div>
-                </div>
-                <span class="required-field" asp-validation-for="Proteins"></span>
-            </div>
-
-            <!--Description-->
-            <div class="field-container">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container-desc">
-                    <input type="text" id="input" required="true" asp-for="Description">
-                    <label for="input" class="label" asp-for="Description">Description</label>
-                    <div class="underline"></div>
-                </div>
-                <span class="required-field" asp-validation-for="Description"></span>
-            </div>
-
-            <!--Picture-->
-            <div class="field-container">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="input-container-desc">
-                    <input type="file" id="input" required="true" asp-for="Picture">
-                    <label for="input" class="label" asp-for="Picture">Picture</label>
-                    <div class="underline"></div>
-                </div>
-                <span class="required-field" asp-validation-for="Picture"></span>
-            </div>
 
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<form class="form" asp-action="Create" method="post" enctype="multipart/form-data">
+   
+    <h2>Create your recipe!</h2>
+    <!--Name-->
+
+    <div asp-validation-summary="ModelOnly"></div>
+    <div class="flex-column">
+        <label for="input" class="form-label" asp-for="Name">Name</label>
     </div>
-</div>
+    <div class="inputForm-Name">
+        <input class="input" id="input" required="true" asp-for="Name" placeholder="Enter recipe name" />
+    </div>
+    <span class="required-field" asp-validation-for="Name"></span>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+    <!--Description-->
+    <div asp-validation-summary="ModelOnly"></div>
+    <div class="flex-column">
+        <label for="input" class="form-label" asp-for="Description">Description</label>
+    </div>
+    <div class="inputForm-Desc">
+        
+        <textarea class="input" id="input" required="true" asp-for="Description" placeholder="Enter instructions on how your recipe is made">
+        </textarea>
+    </div>
+    <span class="required-field" asp-validation-for="Description"></span>
+
+    <!--Picture-->
+
+    <div asp-validation-summary="ModelOnly"></div>
+    
+    <div class="file-upload-wrapper">
+        <label class="file-upload">
+            <span class="upload-btn">Upload Image</span>
+            <input type="file" id="fileInput" required="true" asp-for="Picture" accept="image/*">
+        </label>
+        <img id="preview" class="preview-img" alt="Image Preview">
+    </div>
+    <span class="required-field" asp-validation-for="Picture"></span>
+
+    
+        
+
+    
+
+    <!--Calories-->
+    
+    <div class="number-input">
+        <label for="input" class="label" asp-for="Calories">Calories</label>
+        <div asp-validation-summary="ModelOnly"></div>
+        <input asp-for="Calories" required="true" type="number" id="input" value="0" min="0" max="10000">
+        <span class="required-field" asp-validation-for="Calories"></span>
+    </div>
+
+    <!--Fats-->
+   
+
+    <div class="number-input">
+        <label for="input" class="label" asp-for="Fats">Fats</label>
+        <div asp-validation-summary="ModelOnly"></div>
+        <input asp-for="Fats" required="true" type="number" id="input" value="0" min="0" max="10000">
+        <span class="required-field" asp-validation-for="Fats"></span>
+    </div>
+
+    <!--Carbs-->
+
+    <div class="number-input">
+        <label for="input" class="label" asp-for="Carbs">Carbs</label>
+        <div asp-validation-summary="ModelOnly"></div>
+        <input asp-for="Carbs" required="true" type="number" id="input" value="0" min="0" max="10000">
+        <span class="required-field" asp-validation-for="Carbs"></span>
+    </div>
+
+    <!--Proteins-->
+    
+    <div class="number-input">
+        <label for="input" class="label" asp-for="Proteins">Proteins</label>
+        <div asp-validation-summary="ModelOnly"></div>
+        <input asp-for="Proteins" required="true" type="number" id="input" value="0" min="0" max="10000">
+        <span class="required-field" asp-validation-for="Proteins"></span>
+    </div>
+
+
+
+    <div>
+        <input type="submit" value="Create" class="button-submit" />
+    </div>
+
+
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        const input = document.getElementById('fileInput');
+        const preview = document.getElementById('preview');
+
+        input.addEventListener('change', function () {
+            const file = this.files[0];
+            if (file && file.type.startsWith('image/')) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    preview.src = e.target.result;
+                    preview.style.display = 'block';
+                };
+                reader.readAsDataURL(file);
+            } else {
+                preview.style.display = 'none';
+                preview.removeAttribute('src');
+            }
+        });
+    </script>
 }
